[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyorerun"]

[project]
name = "pyorerun"
version = " 1.2.3"
authors = [{name = "Pierre Puchaud", email = "puchaud.pierre@gmail.com"}]
maintainers = [{name = "Pierre Puchaud", email = "puchaud.pierre@gmail.com"}]
description = "A Python package to rerun C3D files and pyomeca simulations."
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
         "Programming Language :: Python :: 3",
         "License :: OSI Approved :: MIT License",
         "Operating System :: OS Independent",
     ]
dependencies = [
#    "ezc3d", # Not yet available on pypi, use `conda install -c conda-forge ezc3d`
    "numpy==1.26.4",
    "rerun-sdk==0.21.0",
    "trimesh",
    "pyomeca",
    "tk",
    "imageio",
    "imageio-ffmpeg",
    "opensim",
#    "biorbd" # Not yet available on pypi, use `conda install -c conda-forge biorbd`
    ]
keywords = ["c3d", "motion capture", "rerun", "biorbd", "pyomeca"]

[project.urls]
homepage = "http://github.com/Ipuch/pyorerun"
